--- a/Models/SpeechCodec/2022.10.24_EnCodec.md
+++ b/Models/SpeechCodec/2022.10.24_EnCodec.md
@@ -3,45 +3,24 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: High Fidelity Neural Audio Compression
+- 标题: "High Fidelity Neural Audio Compression"
 - 作者:
-  | 序号 | 作者 | 机构 |
-  | :-: | --- | --- |
-  | 01 | [Alexandre Défossez](../../Authors/Alexandre_Défossez.md) | [Meta AI, FAIR Team, Paris, France](../../Institutions/USA-Meta.AI.md) |
-  | 02 | [Jade Copet](../../Authors/Jade_Copet.md) | [Meta AI, FAIR Team, Paris, France](../../Institutions/USA-Meta.AI.md) |
-  | 03 | [Gabriel Synnaeve](../../Authors/Gabriel_Synnaeve.md) | [Meta AI, FAIR Team, Paris, France](../../Institutions/USA-Meta.AI.md) |
-  | 04 | [Yossi Adi](../../Authors/Yossi_Adi.md) | [Meta AI, FAIR Team, Tel-Aviv, Israel](../../Institutions/USA-Meta.AI.md) |
-- 机构:
-  | 序号 | 机构 | 占比 |
-  | :-: | --- |:-:|
-  | 01 | [Meta AI](../../Institutions/USA-Meta.AI.md) | 04/04 |
-- 时间:
-  - 预印时间: 2022.10.24 ArXiv v1
-  - 更新笔记: 2024.09.05
-- 发表:
-  - [TMLR](../../Publications/TMLR.md) 
+  - 01 Alexandre Défossez (Meta AI, FAIR Team, Paris, France)
+  - 02 Jade Copet (Meta AI, FAIR Team, Paris, France)
+  - 03 Gabriel Synnaeve (Meta AI, FAIR Team, Paris, France)
+  - 04 Yossi Adi (Meta AI, FAIR Team, Tel-Aviv, Israel)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2210.13438)
-  - [DOI]()
+  - [Publication](https://openreview.net/forum?id=ivCd8z8zR2)
   - [Github](https://github.com/facebookresearch/encodec)
-  - [Demo]()
-  - [Scholar](https://scholar.google.com/scholar?cluster=11269141130994676820)
-- 标签:
-  - [编解码器](../../Tags/Codec.md)
-  - [开源](../../Tags/OpenSource.md)
-- 页数: 19
-- 引用: ?
-- 被引: 415
-- 数据:
-  - ? 
-- 对比:
-  - ?
-- 复现:
-  - ?
+  - [Demo](https://ai.honu.io/papers/encodec/samples.html)
+- 文件:
+  - [ArXiv](_PDF/2210.13438v1__Encodec__High_Fidelity_Neural_Audio_Compression.pdf)
+  - [Publication](_PDF/2210.13438p0__Encodec__TMLR2023.pdf)
 
 </details>
 
-## Abstract
+## Abstract: 摘要
 
 <details>
 <summary>展开原文</summary>
@@ -57,6 +36,7 @@ Our approach is superior to the baselines methods across all evaluated settings,
 Code and models are available at https://github.com/facebookresearch/encodec.
 
 </details>
+<br>
 
 本文介绍一个基于神经网络的 SoTA 实时高保真音频编解码器.
 它由流式编码器-解码器架构和量化隐空间构成, 以端到端的范式进行训练.
@@ -68,21 +48,21 @@ Code and models are available at https://github.com/facebookresearch/encodec.
 所提方法在所有评估设置中都优于基线方法, 考虑到 24 kHz 单声道和 48 kHz 立体声音频.
 代码和模型可在 https://github.com/facebookresearch/encodec 获得.
 
-## 1.Introduction
+## 1·Introduction: 引言
 
 Recent studies suggest that streaming audio and video have accounted for the majority of the internet traffic in 2021 (82% according to (Cisco, 2021)).
 With the internet traffic expected to grow, audio compression is an increasingly important problem.
 In lossy signal compression we aim at minimizing the bitrate of a sample while also minimizing the amount of distortion according to a given metric, ideally correlated with human perception.
 Audio codecs typically employ a carefully engineered pipeline combining an encoder and a decoder to remove redundancies in the audio content and yield a compact bitstream.
 Traditionally, this is achieved by decomposing the input with a signal processing transform and trading off the quality of the components that are less likely to influence perception.
-Leveraging neural networks as trained transforms via an encoder-decoder mechanism has been explored by Morishima et al.(1990); Rippel et al.(2019); [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md).
+Leveraging neural networks as trained transforms via an encoder-decoder mechanism has been explored by Morishima et al.(1990); Rippel et al.(2019); [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md).
 Our research work is in the continuity of this line of work, with a focus on audio signals.
 
 The problems arising in lossy neural compression models are twofold: first, the model has to represent a wide range of signals, such as not to overfit the training set or produce artifact laden audio outside its comfort zone.
 We solve this by having a large and diverse training set (described in Section 4.1), as well as discriminator networks (see Section 3.4) that serve as perceptual losses, which we study extensively in Section 4.5.1, Tab.02.
 The other problem is that of compressing efficiently, both in compute time and in size.
 For the former, we limit ourselves to models that run in real-time on a single CPU core.
-For the latter, we use residual vector quantization of the neural encoder floating-point output, for which various approaches have been proposed (Van Den Oord et al., 2017; [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md)).
+For the latter, we use residual vector quantization of the neural encoder floating-point output, for which various approaches have been proposed (Van Den Oord et al., 2017; [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md)).
 
 Accompanying those technical contributions, we posit that designing end-to-end neural compression models is a set of intertwined choices, among which at least the encoder-decoder architecture, the quantization method, and the perceptual loss play key parts.
 Objective evaluations exist and we report scores on them in our ablations (Section 4.5.1).
@@ -91,7 +71,7 @@ Those evaluations (MUSHRA) consist in having humans listen to, compare, and rate
 This allows to compare variants of the whole pipeline in isolation, as well as their combined effect, in Section 4.5.1 (Fig.03 and Tab.01).
 Finally, our best model, **EnCodec**, reaches state-of-the-art scores for speech and for music at 1.5, 3, 6, 12 kbps at 24 kHz, and at 6, 12, and 24 kbps for 48 kHz with stereo channels.
 
-## 2.Related Works·相关工作
+## 2·Related Works: 相关工作
 
 ### Speech and Audio Synthesis·语音与音频合成
 
@@ -117,11 +97,11 @@ These methods produce high coding efficiency for general audio while supporting 
 当前最佳的传统音频编解码器是 Opus (2012) 和 EVS (2015).
 这些方法能够为一般音频提供高效率的编码, 同时支持各种码率, 采样率, 以及实时压缩.
 
-Neural based audio codecs have been recently proposed and demonstrated promising results (Kleijn et al., 2018; Valin & Skoglund, 2019b; Lim et al., 2020; Kleijn et al., 2021; [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md); Omran et al., 2022; Lin et al., 2022; Jayashankar et al., 2022; Li et al.; Jiang et al., 2022), where most methods are based on quantizing the latent space before feeding it to the decoder.
+Neural based audio codecs have been recently proposed and demonstrated promising results (Kleijn et al., 2018; Valin & Skoglund, 2019b; Lim et al., 2020; Kleijn et al., 2021; [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md); Omran et al., 2022; Lin et al., 2022; Jayashankar et al., 2022; Li et al.; Jiang et al., 2022), where most methods are based on quantizing the latent space before feeding it to the decoder.
 In Valin & Skoglund (2019b), an LPCNet (Valin & Skoglund, 2019a) vocoder was conditioned on hand-crafted features and a uniform quantizer.
 Gârbacea et al. (2019) conditioned a WaveNet based model on discrete units obtained from a VQ-VAE (Van Den Oord et al., 2017; Razavi et al., 2019) model, while Skoglund & Valin (2019) tried feeding the Opus codec (Valin et al., 2012) to a WaveNet to further improve its perceptual quality.
 Jayashankar et al. (2022); Jiang et al. (2022) propose an auto-encoder with a vector quantization layer applied over the latent representation and minimizing the reconstruction loss, while Li et al. suggested using Gumbel-Softmax (GS) (Jang et al., 2017) for representation quantization.
-The most relevant related work to ours is the [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md) model, in which the authors propose a fully convolutional encoder decoder architecture with a Residual Vector Quantization (RVQ) (Gray, 1984; Vasuki & Vanathi, 2006) layers.
+The most relevant related work to ours is the [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md) model, in which the authors propose a fully convolutional encoder decoder architecture with a Residual Vector Quantization (RVQ) (Gray, 1984; Vasuki & Vanathi, 2006) layers.
 The model was optimized using both reconstruction loss and adversarial perceptual losses.
 
 近期提出的基于神经网络的编解码器已经展示了不错的结果, 其中大多数方法都基于量化隐空间, 然后将其输入到解码器中.
@@ -131,13 +111,13 @@ The model was optimized using both reconstruction loss and adversarial perceptua
 - Jayashankar 等人提出了一个在隐表示上使用矢量量化层的自编码器, 并最小化重构损失;
 - Li 等人提出用 Gumbel-Softmax 以表示量化.
 
-与本文最相关的工作是 [SoundStream (2021)](2021.07.07_SoundStream.md), 它提出了一个带有残差矢量量化 (Residual Vector Quantization, RVQ) 层的全卷积编码器-解码器架构. 该模型通过重构损失和对抗感知损失进行优化.
+与本文最相关的工作是 [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md), 它提出了一个带有残差矢量量化 (Residual Vector Quantization, RVQ) 层的全卷积编码器-解码器架构. 该模型通过重构损失和对抗感知损失进行优化.
 
 ### Audio Discretization·音频离散化
 
 Representing audio and speech using discrete values was proposed to various tasks recently.
 Dieleman et al. (2018); Dhariwal et al. (2020) proposed a hierarchical VQ-VAE based model for learning discrete representation of raw audio, next combined with an autoregressive model, demonstrating the ability to generate high quality music.
-Similarly, Lakhotia et al. (2021); Kharitonov et al. (2021) demonstrated that self-supervised learning methods for speech (e.g., [HuBERT (2021)](../Speech_Representaion/2021.06.14_HuBERT.md)), can be quantized and used for conditional and unconditional speech generation.
+Similarly, Lakhotia et al. (2021); Kharitonov et al. (2021) demonstrated that self-supervised learning methods for speech (e.g., [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md)), can be quantized and used for conditional and unconditional speech generation.
 Similar methods were applied to speech resynthesis (Polyak et al., 2021), speech emotion conversion (Kreuk et al., 2021), spoken dialog system (Nguyen et al., 2022), and speech-to-speech translation (Lee et al., 2021a;b; Popuri et al., 2022).
 
 近期使用离散值表示音频和语音被提出用于各种任务.
@@ -145,14 +125,14 @@ Similar methods were applied to speech resynthesis (Polyak et al., 2021), speech
 - 类似地, Lakhotia 等人展示了语音的自监督学习方法 (如 HuBERT (2021)) 能够量化并用于条件和非条件语音生成;
 - 类似的方法被用于语音合成, 语音情感转换, 口语对话系统, 以及语音到语音的翻译.
 
-## 3.Model·模型
+## 3·Methodology: 方法
 
 An audio signal of duration $d$ can be represented by a sequence $\mathbf{x}\in[−1,1]^{C_a\times T}$ with $C_a$ the number of audio channels, $T=d \cdot f_{sr}$ the number of audio samples at a given sample rate $f_{sr}$.
-The **EnCodec** model is composed of three main components: 
+The **EnCodec** model is composed of three main components:
 1. First, an encoder network $E$ is input an audio extract and outputs a latent representation $\mathbf{z}$;
-2. Next, a quantization layer $Q$ produces a compressed representation $\mathbf{z}_q$, using vector quantization; 
+2. Next, a quantization layer $Q$ produces a compressed representation $\mathbf{z}_q$, using vector quantization;
 3. Lastly, a decoder network $G$ reconstructs the time-domain signal, $\hat{\mathbf{x}}$, from the compressed latent representation $\mathbf{z}_q$.
->
+
 The whole system is trained end-to-end to minimize a reconstruction loss applied over both time and frequency domain, together with a perceptual loss in the form of discriminators operating at different resolutions.
 
 时长为 $d$ 的音频信号可以由一个序列 $\mathbf{x}\in [-1,1]^{C_a\times T}$ 表示, 其中 $C_a$ 是音频通道数, $T=d \cdot f_{sr}$ 是给定采样率 $f_{sr}$ 下音频样本数.
@@ -169,10 +149,10 @@ A visual description of the proposed method can be seen in Fig.01.
 
 ![](Images/2022.10.24_Encodec_Fig.01.png)
 
-### 3.1.Encoder & Decoder Architecture·编码器与解码器架构
+### 3.1·Encoder & Decoder Architecture·编码器与解码器架构
 
 The **EnCodec** model is a simple streaming, convolutional-based encoder-decoder architecture with sequential modeling component applied over the latent representation, both on the encoder and on the decoder side.
-Such modeling framework was shown to provide great results in various audio-related tasks, e.g., source separation and enhancement (Défossez et al., 2019; Defossez et al., 2020), neural vocoders ([MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md); [HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md)), audio codec ([SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md)), and artificial bandwidth extension ([SEANet (2020)](../_Basis/2020.09.04_SEANet.md); Li et al., 2021).
+Such modeling framework was shown to provide great results in various audio-related tasks, e.g., source separation and enhancement (Défossez et al., 2019; Defossez et al., 2020), neural vocoders ([MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md); [HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md)), audio codec ([SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md)), and artificial bandwidth extension ([SEANet (2020)](../_Basis/2020.09.04_SEANet.md); Li et al., 2021).
 We use the same architecture for 24 kHz and 48 kHz audio.
 
 **EnCodec** 模型是一个简单的流式, 基于卷积的编码器-解码器架构, 其中在隐表示上应用序列建模组件, 编码器和解码器两侧都有.
@@ -186,7 +166,7 @@ Each convolution block is composed of a single residual unit followed by a down-
 The residual unit contains two convolutions with kernel size 3 and a skip-connection.
 The number of channels is doubled whenever down-sampling occurred.
 The convolution blocks are followed by a two-layer LSTM for sequence modeling and a final 1D convolution layer with a kernel size of 7 and $D$ output channels.
-Following [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md); Li et al. (2021), we use $C= 32$, $B=4$ and $(2, 4, 5, 8)$ as strides.
+Following [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md); Li et al. (2021), we use $C= 32$, $B=4$ and $(2, 4, 5, 8)$ as strides.
 We use ELU as a non-linear activation function (Clevert et al., 2015) either layer normalization (Ba et al., 2016) or weight normalization (Salimans & Kingma, 2016).
 We use two variants of the model, depending on whether we target the low-latency streamable setup, or a high fidelity non-streamable usage.
 With this setup, the encoder outputs 75 latent steps per second of audio at 24 kHz, and 150 at 48 kHz.
@@ -198,7 +178,7 @@ The decoder mirrors the encoder, using transposed convolutions instead of stride
 通道数每当下采样发生时进行翻倍.
 卷积块后面是一个两层 LSTM 用于序列建模, 最后一个 1D 卷积层具有卷积核大小为 7 和 $D$ 个输出通道.
 
-遵循 [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md) 的设置, 我们使用 $C=32$, $B=4$, $(2, 4, 5, 8)$ 作为步长.
+遵循 [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md) 的设置, 我们使用 $C=32$, $B=4$, $(2, 4, 5, 8)$ 作为步长.
 我们使用 ELU 作为非线性激活函数, 层归一化或权重归一化.
 我们使用两个变体模型, 取决于我们的目标是低延迟流式, 或高精度非流式.
 在这一设置下, 编码器 24 kHz 时输出 75 隐步长每秒的音频, 48 kHz 时为 150 个.
@@ -229,9 +209,9 @@ We notice a small gain over the objective metrics by keeping a form of normaliza
 我们用权重归一化替换层归一化, 因为前者不适合流式设置.
 我们注意到在保持某种形式的归一化的情况下, 目标指标的性能有所提升, 如表 A.3 所示.
 
-### 3.2.Residual Vector Quantization·残差矢量量化
+### 3.2·Residual Vector Quantization·残差矢量量化
 
-We use Residual Vector Quantization (RVQ) to quantize the output of the encoder as introduced by [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md).
+We use Residual Vector Quantization (RVQ) to quantize the output of the encoder as introduced by [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md).
 Vector quantization consists in projecting an input vector onto the closest entry in a codebook of a given size.
 RVQ refines this process by computing the residual after quantization, and further quantizing it using a second codebook, and so forth.
 
@@ -239,7 +219,7 @@ RVQ refines this process by computing the residual after quantization, and furth
 矢量量化是将输入向量投影到给定大小的码本中最近的元素.
 RVQ 通过在量化后计算残差改进这一过程, 并使用第二个码本进一步量化, 依此类推.
 
-We follow the same training procedure as described by Dhariwal et al. (2020) and [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md).
+We follow the same training procedure as described by Dhariwal et al. (2020) and [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md).
 The codebook entry selected for each input is updated using an exponential moving average with a decay of 0.99, and entries that are not used are replaced with a candidate sampled from the current batch.
 We use a straight-through-estimator (Bengio et al., 2013) to compute the gradient of the encoder, e.g. as if the quantization step was the identity function during the backward phase.
 Finally, a commitment loss, consisting of the MSE between the input of the quantizer and its output, with gradient only computed with respect to its input, is added to the overall training loss.
@@ -249,7 +229,7 @@ Finally, a commitment loss, consisting of the MSE between the input of the quant
 我们使用直通估计器用于计算编码器的梯度, 例如, 假设量化步骤在反向阶段是恒等函数.
 最后, 一个提交损失, 由量化器的输入与其输出之间的 MSE 组成, 只计算其输入的梯度, 被添加到整体训练损失中.
 
-By selecting a variable number of residual steps at train time, a single model can be used to support multiple bandwidth target ([SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md)).
+By selecting a variable number of residual steps at train time, a single model can be used to support multiple bandwidth target ([SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md)).
 For all of our models, we use at most 32 codebooks (16 for the 48 kHz models) with 1024 entries each, e.g. 10 bits per codebook.
 When doing variable bandwidth training, we select randomly a number of codebooks as a multiple of 4, i.e. corresponding to a bandwidth 1.5, 3, 6, 12 or 24 kbps at 24 kHz.
 Given a continuous latent represention with shape [B, D, T] that comes out of the encoder, this procedure turns it into a discrete set of indexes [B, Nq, T] with Nq the number of codebooks selected.
@@ -261,7 +241,7 @@ This discrete representation can changed again to a vector by summing the corres
 给定编码器输出的连续潜在表示 [B, D, T], 这一过程将其转换为离散索引集 [B, Nq, T], 其中 Nq 是所选码本的数量.
 这个离散表示可以再转换为向量, 这就是将相应码本元素求和得到的结果.
 
-### 3.3.Language Modeling and Entropy Coding·语言模型和熵编码
+### 3.3·Language Modeling and Entropy Coding·语言模型和熵编码
 
 We additionally train a small Transformer based language model (Vaswani et al., 2017) with the objective of keeping faster than real time end-to-end compression/decompression on a single CPU core.
 The model consists of 5 layers, 8 heads, 200 channels, a dimension of 800 for the feed-forward blocks, and no dropout.
@@ -295,7 +275,7 @@ class StreamingTransformerEncoderLayer(nn.TransformerEncoderLayer):
             sa_input = self.norm1(x)
             x = x + self._sa_block(sa_input, x_past, past_context)
 
-            
+
             x = x + self._ff_block(self.norm2(x))
         else:
             sa_input = x
@@ -370,7 +350,7 @@ class StreamingTransformerEncoder(nn.Module):
 
 class LMModel(nn.Module):
     def __init__(
-      self, 
+      self,
       n_q : int = 32,
       card: int = 1024,
       dim : int = 200,
@@ -384,9 +364,9 @@ class LMModel(nn.Module):
         self.linears = nn.ModuleList([nn.Linear(dim, card) for _ in range(n_q)])
 
     def forward(
-      self, 
+      self,
       indices: torch.Tensor,
-      states: tp.Optional[tp.List[torch.Tensor]] = None, 
+      states: tp.Optional[tp.List[torch.Tensor]] = None,
       offset: int = 0):
         B, K, T = indices.shape
         input_ = sum([self.emb[k](indices[:, k]) for k in range(K)])
@@ -416,7 +396,7 @@ We discuss the impact on the processing time in Section 4.6.
 我们使用总范围宽度为 224, 并赋予最小范围宽度为 2.
 我们在 4.6 节中讨论处理时间的影响.
 
-### 3.4.Training Objectives·训练目标
+### 3.4·Training Objectives·训练目标
 
 We detail the training objective that combines a reconstruction loss term, a perceptual loss term (via discriminators), and the RVQ commitment loss.
 
@@ -472,9 +452,9 @@ We takeR= 1 andβ= 0.999.
 All the generator losses from Eq. (4) fit into the balancer, except for the commitment loss, as it is not defined with respect to the output of the model.
 
 
-## 4.Experiments and Results 
+## 4·Experiments: 实验
 
-### 4.1.Dataset 
+### 4.1·Dataset
 
 We train **EnCodec** on 24 kHz monophonic across diverse domains, namely: speech, noisy speech, music and general audio while we train the fullband stereo **EnCodec** on only 48 kHz music.
 For speech, we use the clean speech segments from DNS Challenge 4 (Dubey et al., 2022) and the Common Voice dataset (Ardila et al., 2019).
@@ -490,7 +470,7 @@ We reject any sample that has been clipped.
 Finally we add reverberation using room impulse responses provided by the DNS challenge with probability 0.2, and RT60 in the range [0.3, 1.3] except for the single-source music samples.
 For testing, we use four categories: clean speech from DNS alone, clean speech mixed with FSDK50K sample, Jamendo sample alone, proprietary music sample alone.
 
-### 4.2.Baselines
+### 4.2·Baselines
 
 Opus (Valin et al., 2012) is a versatile speech and audio codec standardized by the IETF in 2012.
 It scales from 6 kbps narrowband monophonic audio to 510 kbps fullband stereophonic audio.
@@ -500,11 +480,11 @@ It is the successor of AMR-WB (Bhagat et al., 2012).We use both codecs to serve 
 We also utilize MP3 compression at 64 kbps as an additional baseline for the stereophonic signal compression case.
 MP3 uses lossy data compression by approximating the accuracy of certain components of sound that are considered to be beyond hearing capabilities of most humans.
 Finally, we compare **EnCodec** to the SoundStream model from the official implementation available in Lyra 21at 3.2 kbps and 6 kbps on audio upsampled to 32 kHz.
-We also reproduced a version of [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md) with minor improvements.
+We also reproduced a version of [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md) with minor improvements.
 Namely, we use the relative feature loss introduce in Section 3.4, and layer normalization (applied separately for each time step) in the discriminators, except for the first and last layer, which improved the audio quality during our preliminary studies.
 Results a reported in Tab.A.2 in the Appendix A.3.
 
-### 4.3.Evaluation Methods
+### 4.3·Evaluation Methods
 
 We consider both subjective and objective evaluation metrics.
 For the subjective tests we follow the MUSHRA protocol (Series, 2014), using both a hidden reference and a low anchor.
@@ -513,14 +493,14 @@ We randomly select 50 samples of 5 seconds from each category of the the test se
 To filter noisy annotations and outliers we remove annotators who rate the reference recordings less then 90 in at least 20% of the cases, or rate the low-anchor recording above 80 more than 50% of the time.
 For objective metrics, we use ViSQOL (Hines et al., 2012; Chinen et al., 2020)2, together with the Scale-Invariant Signal-to-Noise Ration (SI-SNR) (Luo & Mesgarani, 2019; Nachmani et al., 2020; Chazan et al., 2021).
 
-### 4.4.Training 
+### 4.4·Training
 
 We train all models for 300 epochs, with one epoch being 2,000 updates with the Adam optimizer with a batch size of 64 examples of 1 second each, a learning rate of 3·10−4,β1= 0.5, andβ2= 0.9.
 All the models are traind using 8 A100 GPUs.
 We use the balancer introduced in Section 3.4 with weightsλt= 0.1,λf= 1, λg= 3, λfeat= 3 for the 24 kHz models.
 For the 48 kHz model, we use instead λg= 4, λfeat= 4.
 
-### 4.5.Results 
+## 5·Results: 结果
 
 We start with the results for **EnCodec** with a bandwidth in{1.5,3,6,12}kbps and compare them to the baselines.
 Results for the streamable setup are reported in Fig.03 and a breakdown per category in Tab.01.
@@ -531,31 +511,31 @@ When considering the additional language model over the codes, we can reduce the
 For instance, we can reduce the bandwidth of the 3 kpbs model to 1.9 kbps.
 We observe that for higher bandwidth, the compression ratio is lower, which could be explained by the small size of the Transformer model used, making hard to model all codebooks together.
 
-#### 4.5.1.Ablation study 
+### 5.1·Ablation study
 
 Next, we perform an ablation study to better evaluate the effect of the discriminator setup, streaming, multi target bandwidth, and balancer.
 We provide more detailed ablation studies in the Appendix, Section A.3.
 
-##### The effect of discriminators setup
+#### The effect of discriminators setup
 
 Various discriminators were proposed in prior work to improve the perceptual quality of the generated audio.
-The Multi-Scale Discriminator (MSD) model proposed by [MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md) and adopted in ([HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md); [HiFi++ (2022)](../TTS3_Vocoder/2022.03.24_HiFi++.md); [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md)), operates on the raw waveform at different resolutions.
-We adopt the same MSD configuration as described in [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md).
+The Multi-Scale Discriminator (MSD) model proposed by [MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md) and adopted in ([HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md); [HiFi++ (2022)](../TTS3_Vocoder/2022.03.24_HiFi++.md); [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md)), operates on the raw waveform at different resolutions.
+We adopt the same MSD configuration as described in [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md).
 Kong et al. (2020) additionally propose the Multi-Period Discriminator (MPD) model, which reshapes the waveform to a 2D input with multiple periods.
-Next, the STFT Discriminator (Mono-STFTD) model was introduced in [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md), where a single network operates over the complex-valued STFT.
-We evaluate our MS-STFTD discriminator against three other discriminator configurations: (i) MSD+Mono STFTD (as in [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md)); (ii) MPD only; (iii) MS-STFTD only; (vi) MS-STFTD+MPD.
+Next, the STFT Discriminator (Mono-STFTD) model was introduced in [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md), where a single network operates over the complex-valued STFT.
+We evaluate our MS-STFTD discriminator against three other discriminator configurations: (i) MSD+Mono STFTD (as in [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md)); (ii) MPD only; (iii) MS-STFTD only; (vi) MS-STFTD+MPD.
 Results are reported in Tab.02.
 Results suggest that using only a multi-scale STFT-based discriminator such as MS STFTD, is enough to generate high quality audio.
 Additionally, it simplifies the model training and reduces training time.
 Including the MPD discriminator, adds a small gain when considering the MUSHRA score.
 
-##### The effect of the streamable modeling
+#### The effect of the streamable modeling
 
 We also investigate streamable vs.
 non-streamable setups and report results in Tab.03.
 Unsurprisingly, we notice a small degradation switching from non-streamable to streamable but the performance remains strong while this setting enables streaming inference.
 
-##### The effect of the balancer
+#### The effect of the balancer
 
 Lastly, we present results evaluating the impact of the balancer.
 We train the  **EnCodec** model considering various valuesλt,λf,λg, andλfeatwith and without the balancer.
@@ -563,7 +543,7 @@ Results are reported in Tab.A.4 in the Appendix.
 As expected, results suggest the balancer significantly stabilizes the training process.
 See Appendix A.3 for more details.
 
-#### 4.5.2.Stereo Evaluation 
+### 5.2·Stereo Evaluation
 
 All previously reported results considered only the monophonic setup.Although it makes sense when considering speech data, however for music data, stereo compression is highly important.
 We adjust our current setup to stereo by only modifying our discriminator setup as described in Section 3.4.
@@ -571,7 +551,7 @@ Results for **EnCodec** working at 6 kbps, **EnCodec** with Residual Vector Quan
 **EnCodec** is significantly outperforms Opus at 6kbps and is comparable to MP3 at 64kbps, while **EnCodec** at 12kpbs achieve comparable performance to **EnCodec** at 24kbps.
 Using a language model and entropy coding gives a variable gain between 20% to 30%.
 
-### 4.6.Latency and computation time 
+### 5.3·Latency and computation time
 
 We report the initial latency and real time factor on Tab.05.
 The real-time factor is here defined as the ratio between the duration of the audio and the processing time, so that it is greater than one when the method is faster than real time.
@@ -592,7 +572,7 @@ streaming).
 At 48 kHz, the increased number of step size lead to a slower than real time processing, although a more efficient implementation, or using accelerated hardware would improve the RTF.
 It could also be used for archiving where real time processing is not required.
 
-## 5.Conclusion 
+## 6·Conclusions: 结论
 
 We presented **EnCodec**: a state-of-the-art real-time neural audio compression model, producing high-fidelity audio samples across a range of sample rates and bandwidth.
 We showed subjective and objective results from 24kHz monophonic at 1.5 kbps (Fig.03) to 48kHz stereophonic (Tab.04).
@@ -600,21 +580,20 @@ We improved sample quality by developing a simple but potent spectrogram-only ad
 Besides, we stabilized training and improved the interpretability of the weights for losses through a novel gradient balancer.
 Finally, we also demonstrated that a small Transformer model can be used to further reduce the bandwidth by up to 40% without further degradation of quality, in particular for applications where low latency is not essential (e.g.
 music streaming).
->
+
 
 ## Appendix
-### A.1.Experimental Details
+### A.1·Experimental Details
 #### Datasets Details
 #### SoundStream Model
-### A.2.Alternative Quantizers
-#### A.2.1.DiffQ Quantizer
+### A.2·Alternative Quantizers
+#### A.2.1·DiffQ Quantizer
 ##### Pseudo Quantization Noise
 ##### Test Time Quantization
 ##### Sparsity
-#### A.2.2.Gumbel-Softmax Quantizer
-### A.3.Additional Results
+#### A.2.2·Gumbel-Softmax Quantizer
+### A.3·Additional Results
 #### Comparing to SoundStream
 #### The Effect of the Model Architecture
 #### The Effect of the Balancer
-### A.4.Societal Impact
-
+### A.4·Societal Impact
